--- a/Tasneem_Task4/index.html
+++ b/Tasneem_Task4/index.html
@@ -18,5 +18,6 @@
         <area shape="rect" coords="90,140,169,209" href="https://en.wikipedia.org/wiki/tuna" alt="tuna" title="tuna">
         <area shape="rect" coords="235,230,362,310" href="https://en.wikipedia.org/wiki/bread" alt="bread" title="bread">
     </map>
+    <center><strong>createad by &copy; Tasneem Emad</strong></center>
 </body>
 </html>
