--- a/Tasneem_Task6/index.html
+++ b/Tasneem_Task6/index.html
@@ -28,7 +28,7 @@
         <img src="images/basketball.jpg" alt="basketball">
     </div>
 
-    <center><strong>&copy; Tasneem Emad</strong></center>
+    <center><strong>created by &copy; Tasneem Emad</strong></center>
 
     
 </body>
