--- a/Tasneem_Task8/index.html
+++ b/Tasneem_Task8/index.html
@@ -81,9 +81,9 @@
             </div>
 
         </div>
-        <!-- <footer>
-            <p>&copy; Tasneem Emad</p>
-        </footer> -->
+        <footer>
+            <p>created by &copy; Tasneem Emad</p>
+        </footer>
     </div>
     
 
