--- a/Tasneem_Task9&10/index.html
+++ b/Tasneem_Task9&10/index.html
@@ -60,5 +60,8 @@
             <a href="#"><i class="fa-brands fab fab fab fa-pinterest"></i></a>
         </div>
     </div>
+    <footer>
+        <p>Created by &copy; Tasneem Emad</p>
+      </footer>
 </body>
 </html>
