--- a/Tasneem_Task5/main.html
+++ b/Tasneem_Task5/main.html
@@ -9,5 +9,6 @@
     <iframe src="nav.html" frameborder="0" width="100%" height="70px" ></iframe>
     <iframe src="left.html" frameborder="0" width="20%" height="500px" ></iframe>
     <iframe src="home.html" frameborder="0" width="78%" height="500px" name="rframe"></iframe>
+    <center><strong>created by &copy; Tasneem Emad</strong></center>
 </body>
 </html>
