--- a/Tasneem_task7/index.html
+++ b/Tasneem_task7/index.html
@@ -34,6 +34,8 @@
             </div>
         </div>
     </div>
+
+    <center><strong>created by &copy; Tasneem Emad</strong></center>
     
 </body>
 </html>
